# adv-compro-finals

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  server.json
backend/: Dockerfile  main.py
backend/src/: db.py  main.py  pyproject.toml
backend/src/lib/: environ.py
backend/src/routes/: album.py  auth.py  dashboard.py  healthcheck.py  oauth.py  storage.py
backend/tests/: test_main.py
backend/tools/: entry.sh  setup.sh
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/forgot-password/: page.tsx
frontend/src/app/gallery/: page.tsx
frontend/src/app/gallery/components/: AddPhotosToAlbumModal.tsx  AlbumCard.tsx  CreateAlbumModal.tsx  DashboardCharts.tsx  EmptyState.tsx  PhotoCard.tsx  PreviewModal.tsx  SidebarLink.tsx  UploadPanel.tsx
frontend/src/app/gallery/interfaces/: types.ts
frontend/src/app/gallery/upload/: page.tsx
frontend/src/app/galley /: page.tsx
frontend/src/app/galley /upload/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/password-reset/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Button.tsx
frontend/src/lib/: api.ts
s3/: Dockerfile
s3/scripts/: minio-init.sh
sql/: db_init.sql
src/app/: page.tsx
src/app/gallery/: page.tsx
