[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.12.15",
    "anyio>=4.10.0",
    "databases[asyncpg]>=0.9.0",
    "fastapi[standard]>=0.116.1",
    "minio>=7.2.18",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "pillow-heif>=0.16.0",
    "piexif>=1.1.3",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "uvicorn>=0.35.0",
]
